[metadata]
name = rdp-package
version = 0.1.1
description = Ramer-Douglas-Peucker algorithm implementation with Cython
url = https://github.com/amirkazan/rdp-package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
